fixed display of signin on mobile

--- a/client/public/style/SignUp.css
+++ b/client/public/style/SignUp.css
@@ -115,3 +115,59 @@ input[type="submit"]:hover, input[type="submit"]:focus{
   text-align: center;
   padding: 0;
 }
+
+
+@media only screen and (max-width: 40em) {
+  #login-box {
+    position: relative;
+    top: 13vh;
+    margin: 5% auto;
+    height: 400px;
+    width: 300px;
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    font-family: sans-serif; 
+    font-weight: 300;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+    .left-box{
+      position: relative;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      padding: 40px;
+      width: 100%;
+      height: 400px;
+      flex-direction: column;
+    }
+    .right-box{
+      position: relative;
+      bottom: 0;
+      left: 0;
+      box-sizing: border-box;
+      padding: 40px;
+      width: 100%;
+      height: 400px;
+      background-image: url('https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-022.jpg');
+      background-size: cover;
+      background-position: center;
+      flex-direction: column;
+  }
+  .or
+  {
+      position: absolute;
+      top: 381px;
+      left: 131px;
+      width: 40px;
+      height: 40px;
+      background: #efefef;
+      border-radius: 50%;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+      line-height: 40px;
+      text-align: center;
+      font-weight: 700;
+  }
+ } 
